fix alignment in profile pages

--- a/ui/assets/css/main.css
+++ b/ui/assets/css/main.css
@@ -476,7 +476,8 @@ h1.auth-title {
    ========================================================================== */
 #profile-page {
     display: flex;
-    justify-content: space-between;
+    min-width: 70%;
+    justify-content: center;
 }
 
 .user-profile {
@@ -484,6 +485,7 @@ h1.auth-title {
     display: flex;
     flex-direction: column;
     text-align: center;
+    padding-right: 60px;
 }
 
 .user-profile img {
@@ -502,6 +504,7 @@ h1.auth-title {
 .activity-feed {
     padding: 15px;
     list-style: none;
+    padding-right: 60px;
 }
 
 .activity-feed .feed-item {
@@ -548,7 +551,8 @@ h1.auth-title {
    ========================================================================== */
 #admin-page {
     display: flex;
-    justify-content: space-between;
+    min-width: 70%;
+    justify-content: center;
 }
 
 #admin-page i {
